# DiskANN

./: .gitignore  .gitmodules  CMakeLists.txt  embedding.pb.cc
graph_partition/: CMakeLists.txt  README.md  build.sh  index_relayout.cpp
graph_partition/include/: partitioner.h
graph_partition/src/: partitioner.cpp
include/: embedding.pb.h  index.h  pq_flash_index.h
python/: CMakeLists.txt
python/include/: static_disk_index.h
python/src/: _builder.py  _static_disk_index.py  _static_memory_index.py  module.cpp  static_disk_index.cpp
src/: apple_aligned_file_reader.cpp  disk_utils.cpp  distance.cpp  embedding.pb.cc  embedding.pb.h  pq.cpp  pq_flash_index.cpp
